syntax = "proto3";

option go_package = "github.com/TekClinic/Appointments-MicroService/auth_protobuf";

package appointments;

service AppointmentsService {
  rpc GetAppointment(GetAppointmentRequest) returns (Appointment);
  rpc CreateAppointment(PostAppointmentRequest) returns (AppointmentId);
  rpc GetAppointments(RangeRequest) returns (stream AppointmentId);
  rpc AssignPatient(AppointmentIdRequest) returns (PatientId);
  rpc RemovePatient(AppointmentIdRequest) returns (PatientId);
  rpc DeleteAppointment(AppointmentIdRequest) returns (DeletedMessage);
}

message Time {
  int32 day = 1;
  int32 month = 2;
  int32 year = 3;
  int32 hour = 4;
  int32 minute = 5;
}

message GetAppointmentRequest {
  string token = 1;
  int64 id = 2;
}

message Appointment {

  int64 id = 1;
  int64 patient_id = 2;
  int64 doctor_id = 3;
  Time start_time = 4;
  Time end_time = 5;
  bool approved_by_patient = 6;
  bool visited = 7;
}

message PostAppointmentRequest {
  string token = 1;
  int64 patient_id = 2;
  int64 doctor_id = 3;
  Time start_time = 4;
  Time end_time = 5;
}

message AppointmentId {
  int64 id = 1;
}

message RangeRequest {

  message Date {
    int32 day = 1;
    int32 month = 2;
    int32 year = 3;
  }

  string token = 1;
  Date date = 2;
  string doctor_id = 3;
  string patient_id = 4;
}

message AppointmentIdRequest {
  string token = 1;
  int64 id = 2;
}

message PatientId{
  int64 patient_id = 1;
}

message DeletedMessage{
  string messgae = 1;
}